--- a/main/private/package.json
+++ b/main/private/package.json
@@ -2,7 +2,7 @@
   "name": "FormBuilder",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "grunt": "^1.0.1",
     "grunt-contrib-uglify": "~0.5.0",
     "gulp": "^3.9.0"
   }
